--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,18 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'com.github.xiushak'
 version '1.0-SNAPSHOT'
 
+ext {
+    javaMainClass = "discord.bot.DiscordBot"
+}
+
+application {
+    mainClassName = javaMainClass
+}
 
 repositories {
     mavenCentral()
